advanced server browser added (buggy; need reading over

--- a/src/vcpp/cube.vcproj
+++ b/src/vcpp/cube.vcproj
@@ -2394,6 +2394,19 @@
 					/>
 				</FileConfiguration>
 			</File>
+			<File
+				RelativePath=".\serversearcher.cpp"
+				>
+				<FileConfiguration
+					Name="Release|Win32"
+					>
+					<Tool
+						Name="VCCLCompilerTool"
+						PrecompiledHeaderThrough="graphox.h"
+						PrecompiledHeaderFile=".\Release/graphox.pch"
+					/>
+				</FileConfiguration>
+			</File>
 		</Filter>
 	</Files>
 	<Globals>
