advanced server browser added (buggy; need reading over

--- a/src/vcpp/cube.vcproj
+++ b/src/vcpp/cube.vcproj
@@ -2395,7 +2395,7 @@
 				</FileConfiguration>
 			</File>
 			<File
-				RelativePath=".\serversearcher.cpp"
+				RelativePath="..\graphox\serversearcher.cpp"
 				>
 				<FileConfiguration
 					Name="Release|Win32"
